--- a/Portfolio.html
+++ b/Portfolio.html
@@ -62,7 +62,7 @@
         <center> 
         <h1 style="color: black">Resume</h1>  
         <iframe src= 
-"C:\Users\cassa\OneDrive\Documents\Resume.pdf" 
+"Resume.pdf" 
                 width="800"s
                 height="1000"> 
         </iframe> 
