--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
          <div class="header">
             <h2>About Me</h2>
             <p>
-                <img src="C:\Users\cassa\OneDrive\Pictures\ac.jpg" alt="Sisters" style="float: left;width:140px;height:110px;">
+                <img src="ac.jpg" alt="Sisters" style="float: left;width:140px;height:110px;">
                 My name is Cassandra Jensen and I'm a sophomore in Computer Science at University of Idaho. I enjoy crocheting, spending time with my cats, and riding my motorcycle.
             </p>
         </div>
